Bug fix Overlapping Font Size
Refs: #6630

--- a/packages/themes/bmf/src/mixins/alert.scss
+++ b/packages/themes/bmf/src/mixins/alert.scss
@@ -42,7 +42,7 @@
 				place-items: baseline;
 
 				&::part(icon) {
-					line-height: 1.375rem;
+					line-height: 1.375;
 				}
 			}
 
@@ -303,8 +303,8 @@
 				font-family: 'Material Symbols Rounded';
 				font-weight: 900;
 				font-variation-settings: 'FILL' 1;
-				height: 1.25rem;
-				width: 1.25rem;
+				height: 1.25;
+				width: 1.25;
 			}
 		}
 	}
